--- a/ScrumApplication.Web/Web.config
+++ b/ScrumApplication.Web/Web.config
@@ -15,6 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication>
+      <forms defaultUrl="/Home/Index" loginUrl="/User/Login" slidingExpiration="true" timeout="2880"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
