Project Home became BacklogIndex, Sprint Views updated, Comment added to EditBacklog View and assignment is now can be done with buttons, in Team Edit users can be added from user's community with button click.

--- a/ScrumApplication.Entity/ScrumApplication.Entity.csproj
+++ b/ScrumApplication.Entity/ScrumApplication.Entity.csproj
@@ -227,7 +227,16 @@
     <Compile Include="Migrations\201808091104208_MigrationFiftyTwo1.Designer.cs">
       <DependentUpon>201808091104208_MigrationFiftyTwo1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808101139207_MigrationFiftyThree.cs" />
+    <Compile Include="Migrations\201808101139207_MigrationFiftyThree.Designer.cs">
+      <DependentUpon>201808101139207_MigrationFiftyThree.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808101246252_MigrationFiftyThree1.cs" />
+    <Compile Include="Migrations\201808101246252_MigrationFiftyThree1.Designer.cs">
+      <DependentUpon>201808101246252_MigrationFiftyThree1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Activity.cs" />
     <Compile Include="Models\BacklogViewModel.cs" />
     <Compile Include="Models\BacklogToMember.cs" />
     <Compile Include="Models\Comment.cs" />
@@ -240,11 +249,13 @@
     <Compile Include="Models\Epic.cs" />
     <Compile Include="Models\Manager.cs" />
     <Compile Include="Models\ProjectHomeViewModel.cs" />
+    <Compile Include="Models\ProjectViewModel.cs" />
     <Compile Include="Models\Sprint.cs" />
     <Compile Include="Models\ProductBacklog.cs" />
     <Compile Include="Models\SprintViewModel.cs" />
     <Compile Include="Models\Team.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserCommunityViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -383,6 +394,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808091104208_MigrationFiftyTwo1.resx">
       <DependentUpon>201808091104208_MigrationFiftyTwo1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808101139207_MigrationFiftyThree.resx">
+      <DependentUpon>201808101139207_MigrationFiftyThree.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808101246252_MigrationFiftyThree1.resx">
+      <DependentUpon>201808101246252_MigrationFiftyThree1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
