--- a/ScrumApplication.DAL/ScrumApplication.DAL.csproj
+++ b/ScrumApplication.DAL/ScrumApplication.DAL.csproj
@@ -48,8 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helpers\RadioButton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ActivityRepository.cs" />
     <Compile Include="Repositories\ProjectRepository.cs" />
     <Compile Include="Repositories\EpicRepository.cs" />
     <Compile Include="Repositories\SprintRepository.cs" />
@@ -68,6 +68,9 @@
       <Project>{486db8e5-346e-409a-9991-31c6bad29203}</Project>
       <Name>ScrumApplication.Entity</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
