--- a/ScrumApplication.Web/ScrumApplication.Web.csproj
+++ b/ScrumApplication.Web/ScrumApplication.Web.csproj
@@ -261,6 +261,7 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Project\IndexSprint.cshtml" />
     <Content Include="Views\Project\IndexBacklog.cshtml" />
+    <Content Include="Views\Project\CommentBacklog.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
