--- a/ScrumApplication.Entity/ScrumApplication.Entity.csproj
+++ b/ScrumApplication.Entity/ScrumApplication.Entity.csproj
@@ -248,12 +248,14 @@
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Epic.cs" />
     <Compile Include="Models\Manager.cs" />
+    <Compile Include="Models\ProjectEditViewModel.cs" />
     <Compile Include="Models\ProjectHomeViewModel.cs" />
     <Compile Include="Models\ProjectViewModel.cs" />
     <Compile Include="Models\Sprint.cs" />
     <Compile Include="Models\ProductBacklog.cs" />
     <Compile Include="Models\SprintViewModel.cs" />
     <Compile Include="Models\Team.cs" />
+    <Compile Include="Models\TeamCreateViewModel.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserCommunityViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
