--- a/ScrumApplication.Web/ScrumApplication.Web.csproj
+++ b/ScrumApplication.Web/ScrumApplication.Web.csproj
@@ -260,6 +260,7 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Project\IndexBacklog.cshtml" />
     <Content Include="Views\Project\CommentBacklog.cshtml" />
+    <Content Include="Views\User\Account.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
